--- a/index.html
+++ b/index.html
@@ -190,8 +190,9 @@
 			
 			<p>
 			  I am a <a href="http://cxc.harvard.edu/fellows/fellowslist.html"> NASA Einstein Fellow </a> at 
-			  <a href="http://web.astro.princeton.edu/">Department of Astrophysical Sciences at Princeton University</a>. 
-			  
+			  <a href="https://web.astro.princeton.edu/">Department of Astrophysical Sciences</a>
+			  at
+			  <a href="https://www.princeton.edu/">Princeton University</a>. 
 			  I develop theory and high-performance simulations to 
 			  study structure formation on scales from cosmology to 
 			  star formation. I am at the forefront of research in 
@@ -312,7 +313,7 @@
                 <p>
 				<a href="https://ui.adsabs.harvard.edu/abs/2019arXiv190804790Y/abstract"> Fuzzy Dark Matter Soliton Cores around Supermassive Black Holes </a>
                 <br/>
-                Davies, E.Y.; <b>Mocz, P.</b>; 2019 MNRAS, submitted
+                Davies, E.Y.; <b>Mocz, P.</b>; 2019 MNRAS, accepted
                 </p>
                 <p>
 				<a href="https://ui.adsabs.harvard.edu/abs/2019ApJ...884L..35M/abstract">  A Markov model for non-lognormal density distributions in compressive isothermal turbulence </a>
