--- a/index.html
+++ b/index.html
@@ -220,14 +220,17 @@
 			</p>
 			  
 			<p>
-			  I also develop a variety of new robust, high-performance methods for computational 
-			  physics. My PhD thesis was completed with my advisor <a 
+			  I also develop a variety of new robust, high-performance 
+			  methods for computational physics. My PhD thesis was 
+			  completed at <a href="https://www.harvard.edu/">Harvard 
+			  University</a> with my advisor <a 
 			  href="http://astronomy.fas.harvard.edu/people/lars-hernquist">Lars 
 			  Hernquist</a> on moving mesh magnetohydrodynamics and 
 			  applications to cosmology and star formation. As part of 
 			  that work, I invented a new accurate method for solving 
 			  the magnetohydrodynamic equations on a moving-mesh in the 
-			  <a href="https://wwwmpa.mpa-garching.mpg.de/~volker/arepo/">Arepo</a> 
+			  <a 
+			  href="https://wwwmpa.mpa-garching.mpg.de/~volker/arepo/">Arepo</a> 
 			  code. The method preserves mass, momentum, energy, the 
 			  divergence-free property of the magnetic fields, and 
 			  Galilean-invariance (exact advection). 
