--- a/index.html
+++ b/index.html
@@ -134,7 +134,10 @@
       <div class="container">
         <div class="intro-text">
           <div class="intro-heading">Philip Mocz</div>
-          <div class="intro-lead-in">Einstein Fellow at <a href = "http://web.astro.princeton.edu/">Princeton University</a></div>      
+          <div class="intro-lead-in">Einstein Fellow at <a href = "http://web.astro.princeton.edu/">Princeton University</a></div>  
+            <div class="team-member">
+          			<img class="rounded-circle img-fluid" src="img/people/philip_mocz.jpg" alt="">
+			</div>	
           <ul class="list-inline social-buttons">
                 <li class="list-inline-item">
                   <a href="https://twitter.com/PMocz">
@@ -189,25 +192,29 @@
         <div class="col-lg-12 text-justify text-muted">
 			
 			<p>
-			  I am a <a href="http://cxc.harvard.edu/fellows/fellowslist.html"> NASA Einstein Fellow </a> at 
-			  <a href="https://web.astro.princeton.edu/">Department of Astrophysical Sciences</a>
-			  at
-			  <a href="https://www.princeton.edu/">Princeton University</a>. 
-			  I develop theory and high-performance simulations to 
-			  study structure formation on scales from cosmology to 
-			  star formation. I am at the forefront of research in 
-			  scalar field dark matter, which has seen considerably 
+			  I am a <a 
+			  href="http://cxc.harvard.edu/fellows/fellowslist.html"> 
+			  NASA Einstein Fellow</a> at <a 
+			  href="https://web.astro.princeton.edu/">Department of 
+			  Astrophysical Sciences</a> at <a 
+			  href="https://www.princeton.edu/">Princeton 
+			  University</a>. I develop theory and high-performance 
+			  simulations to study structure formation on scales from 
+			  cosmology to star formation. I am at the forefront of 
+			  research in <a 
+			  href="https://physics.aps.org/synopsis-for/10.1103/PhysRevLett.123.141301"> 
+			  fuzzy dark matter</a>, which has seen considerably 
 			  growing interest in the physics and astronomy communities 
 			  over the last few years. The near-century-old dark matter 
 			  problem is one of the most intriguing mysteries in modern 
 			  physics: we do not know the nature of 84 percent of 
 			  matter in the Universe, yet it is thought to govern 
-			  cosmic structure and hold galaxies together. Scalar 
-			  fields are a promising candidate, and I have created the 
-			  first cosmological simulations of this type of dark 
-			  matter fully coupled to baryonic physics. With my work, I 
-			  can learn about the behavior of the theory and predict 
-			  how future missions such as the <a 
+			  cosmic structure and hold galaxies together. Ultralight 
+			  (fuzzy) dark matter is a promising candidate, and I have 
+			  created the first cosmological simulations of this type 
+			  of dark matter fully coupled to baryonic physics. With my 
+			  work, I can learn about the behavior of the theory and 
+			  predict how future missions such as the <a 
 			  href="https://www.jwst.nasa.gov/">James Webb Space 
 			  Telescope</a> could reveal the nature of the elusive dark 
 			  matter particle. A second active research area of mine is 
@@ -240,9 +247,15 @@
 			  I have broad interests in cosmology, galaxy evolution and 
 			  feedback, black hole physics, structure formation, 
 			  turbulence in the ISM, alternative theories of dark 
-			  matter (scalar field dark matter), numerical methods, 
+			  matter (fuzzy dark matter), numerical methods, 
 			  computer visualization, and applications of machine 
-			  learning and computer vision in astronomy. 
+			  learning and computer vision to astronomy. 
+            </p>
+            
+            <p>
+			  I grew up in <a class="portfolio-link" 
+			  data-toggle="modal" href="#portfolioModalHawaii"> Hawaii</a> 
+			  and I love the <a class="portfolio-link" data-toggle="modal" href="#portfolioModalOutdoors"> outdoors</a>.
             </p>
             
             <p>
@@ -265,7 +278,7 @@
         <div class="row">
           <div class="col-lg-12 text-center">
             <h2 class="section-heading">CV</h2>
-            <p class="text-muted">Download my <a href="pmocz_CV.pdf">CV (.pdf)</a><br><br>
+            <p class="text-muted">Download my <a href="pmocz_CV.pdf">curriculum vitae (CV) [.pdf]</a><br><br>
             <div id="pmoczCV"></div>
             <script src="js/pdfobject.min.js"></script>
             <script>PDFObject.embed("pmocz_CV.pdf", "#pmoczCV");</script>
@@ -726,7 +739,7 @@
                     <h4 class="subheading">Cosmic-Ray Pressure MHD Instability</h4>
                   </div>
                   <div class="timeline-body">
-                    <p class="text-muted">Paper on my simulations of a cosmic-ray pressure gradient instability in a turbulent MHD environment at a shock interface, as part of my project for Astronomy 253 (plasma physics). Read the <a href="manuscripts/pmocz_crmhd.pdf"> report (.pdf) </a> and download the Matlab <a href="https://bitbucket.org/pmocz/crmhd"> code </a>  </p>
+                    <p class="text-muted">Paper on my simulations of a cosmic-ray pressure gradient instability in a turbulent MHD environment at a shock interface, as part of my project for Astronomy 253 (plasma physics). Read the <a href="manuscripts/pmocz_crmhd.pdf"> report (.pdf)</a> and download the Matlab <a href="https://bitbucket.org/pmocz/crmhd"> code</a>  </p>
                   </div>
                 </div>
               </li>
@@ -818,7 +831,7 @@
           </div> 
           <div class="col-sm-4 text-center">
 			<p> </p>
-            <p> <a href="mailto:pmocz@astro.princeton.edu"> pmocz@astro.princeton.edu </a> </p>
+            <p> <a href="mailto:pmocz@astro.princeton.edu"> pmocz@astro.princeton.edu</a> </p>
             <a href="https://orcid.org/0000-0001-6631-2566" target="orcid.widget" rel="noopener noreferrer" style="vertical-align:top;"><img src="https://orcid.org/sites/default/files/images/orcid_16x16.png" style="width:1em;margin-right:.5em;" alt="ORCID iD icon">orcid.org/0000-0001-6631-2566</a>
             <p> </p>
             <ul class="list-inline">
@@ -867,6 +880,69 @@
 
     <!-- Portfolio Modals -->
 
+    <!-- Modal Hawaii -->
+    <div class="portfolio-modal modal fade" id="portfolioModalHawaii" tabindex="-1" role="dialog" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="close-modal" data-dismiss="modal">
+            <div class="lr">
+              <div class="rl"></div>
+            </div>
+          </div>
+          <div class="container">
+            <div class="row">
+              <div class="col-lg-8 mx-auto">
+                <div class="modal-body">
+                  <!-- Project Details Go Here -->
+                  <h2>Hawaii</h2>
+                  <!-- <p class="item-intro text-muted">additional text</p> -->
+                  <img class="img-fluid d-block mx-auto" src="img/personal/pmocz_makapuu.jpg" alt="Makapuu Lighthouse Trail, 2020">
+                  <img class="img-fluid d-block mx-auto" src="img/personal/pmocz_dolphin.jpg" alt="Dolphins at Kona, 2019">
+                  <img class="img-fluid d-block mx-auto" src="img/personal/pmocz_young.jpg" alt="Growing up">
+                  <img class="img-fluid d-block mx-auto" src="img/personal/pmocz_turtle.jpg" alt="Hawaiian Sea Turtle">
+                  <img class="img-fluid d-block mx-auto" src="img/personal/pmocz_seal.jpg" alt="Hawaiian Monk Seal">
+                  <button class="btn btn-primary" data-dismiss="modal" type="button">
+                    <i class="fa fa-times"></i>
+                    Close</button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+
+    <!-- Modal Outdoors -->
+    <div class="portfolio-modal modal fade" id="portfolioModalOutdoors" tabindex="-1" role="dialog" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="close-modal" data-dismiss="modal">
+            <div class="lr">
+              <div class="rl"></div>
+            </div>
+          </div>
+          <div class="container">
+            <div class="row">
+              <div class="col-lg-8 mx-auto">
+                <div class="modal-body">
+                  <!-- Project Details Go Here -->
+                  <h2>Nature</h2>
+                  <!-- <p class="item-intro text-muted">additional text</p> -->
+                  <img class="img-fluid d-block mx-auto" src="img/personal/pmocz_corsica2019.jpg" alt="Corsica, 2019">
+                  <img class="img-fluid d-block mx-auto" src="img/personal/pmocz_windriver2017.jpg" alt="Wind River, 2017">
+                  <button class="btn btn-primary" data-dismiss="modal" type="button">
+                    <i class="fa fa-times"></i>
+                    Close</button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+
     <!-- Modal 1 -->
     <div class="portfolio-modal modal fade" id="portfolioModal1" tabindex="-1" role="dialog" aria-hidden="true">
       <div class="modal-dialog">
@@ -898,7 +974,7 @@
                   </ul>
                   <button class="btn btn-primary" data-dismiss="modal" type="button">
                     <i class="fa fa-times"></i>
-                    Close Project</button>
+                    Close</button>
                 </div>
               </div>
             </div>
@@ -950,7 +1026,7 @@
                   </ul>
                   <button class="btn btn-primary" data-dismiss="modal" type="button">
                     <i class="fa fa-times"></i>
-                    Close Project</button>
+                    Close</button>
                 </div>
               </div>
             </div>
@@ -993,7 +1069,7 @@
                   </ul>
                   <button class="btn btn-primary" data-dismiss="modal" type="button">
                     <i class="fa fa-times"></i>
-                    Close Project</button>
+                    Close</button>
                 </div>
               </div>
             </div>
@@ -1041,7 +1117,7 @@
                   </ul>
                   <button class="btn btn-primary" data-dismiss="modal" type="button">
                     <i class="fa fa-times"></i>
-                    Close Project</button>
+                    Close</button>
                 </div>
               </div>
             </div>
@@ -1088,7 +1164,7 @@
                   </ul>
                   <button class="btn btn-primary" data-dismiss="modal" type="button">
                     <i class="fa fa-times"></i>
-                    Close Project</button>
+                    Close</button>
                 </div>
               </div>
             </div>
@@ -1142,7 +1218,7 @@
                   </ul>
                   <button class="btn btn-primary" data-dismiss="modal" type="button">
                     <i class="fa fa-times"></i>
-                    Close Project</button>
+                    Close</button>
                 </div>
               </div>
             </div>
@@ -1182,7 +1258,7 @@
                   </ul>
                   <button class="btn btn-primary" data-dismiss="modal" type="button">
                     <i class="fa fa-times"></i>
-                    Close Project</button>
+                    Close</button>
                 </div>
               </div>
             </div>
@@ -1224,7 +1300,7 @@
                   </ul>
                   <button class="btn btn-primary" data-dismiss="modal" type="button">
                     <i class="fa fa-times"></i>
-                    Close Project</button>
+                    Close</button>
                 </div>
               </div>
             </div>
@@ -1262,7 +1338,7 @@
                   </ul>
                   <button class="btn btn-primary" data-dismiss="modal" type="button">
                     <i class="fa fa-times"></i>
-                    Close Project</button>
+                    Close</button>
                 </div>
               </div>
             </div>
@@ -1303,7 +1379,7 @@
                   </ul>
                   <button class="btn btn-primary" data-dismiss="modal" type="button">
                     <i class="fa fa-times"></i>
-                    Close Project</button>
+                    Close</button>
                 </div>
               </div>
             </div>
@@ -1342,7 +1418,7 @@
                   </ul>
                   <button class="btn btn-primary" data-dismiss="modal" type="button">
                     <i class="fa fa-times"></i>
-                    Close Project</button>
+                    Close</button>
                 </div>
               </div>
             </div>
@@ -1391,7 +1467,7 @@
                   </ul>
                   <button class="btn btn-primary" data-dismiss="modal" type="button">
                     <i class="fa fa-times"></i>
-                    Close Project</button>
+                    Close</button>
                 </div>
               </div>
             </div>
@@ -1427,7 +1503,7 @@
                   </ul>
                   <button class="btn btn-primary" data-dismiss="modal" type="button">
                     <i class="fa fa-times"></i>
-                    Close Project</button>
+                    Close</button>
                 </div>
               </div>
             </div>
@@ -1463,7 +1539,7 @@
                   </ul>
                   <button class="btn btn-primary" data-dismiss="modal" type="button">
                     <i class="fa fa-times"></i>
-                    Close Project</button>
+                    Close</button>
                 </div>
               </div>
             </div>
@@ -1499,7 +1575,7 @@
                   </ul>
                   <button class="btn btn-primary" data-dismiss="modal" type="button">
                     <i class="fa fa-times"></i>
-                    Close Project</button>
+                    Close</button>
                 </div>
               </div>
             </div>
@@ -1535,7 +1611,7 @@
                   </ul>
                   <button class="btn btn-primary" data-dismiss="modal" type="button">
                     <i class="fa fa-times"></i>
-                    Close Project</button>
+                    Close</button>
                 </div>
               </div>
             </div>
@@ -1568,7 +1644,7 @@
                   </ul>
                   <button class="btn btn-primary" data-dismiss="modal" type="button">
                     <i class="fa fa-times"></i>
-                    Close Project</button>
+                    Close</button>
                 </div>
               </div>
             </div>
@@ -1602,7 +1678,7 @@
                   </ul>
                   <button class="btn btn-primary" data-dismiss="modal" type="button">
                     <i class="fa fa-times"></i>
-                    Close Project</button>
+                    Close</button>
                 </div>
               </div>
             </div>
@@ -1637,7 +1713,7 @@
                   </ul>
                   <button class="btn btn-primary" data-dismiss="modal" type="button">
                     <i class="fa fa-times"></i>
-                    Close Project</button>
+                    Close</button>
                 </div>
               </div>
             </div>
