added twitter feed

--- a/index.html
+++ b/index.html
@@ -828,10 +828,8 @@
                 </li>
               </ul>
             </div>
-          </div> 
-          <div class="col-sm-4 text-center">
 			<p> </p>
-            <p> <a href="mailto:pmocz@astro.princeton.edu"> pmocz@astro.princeton.edu</a> </p>
+            <p> <a href="mailto:pmocz@astro.princeton.edu"><img src="img/mail-icon.png" style="width:1em;margin-right:.5em;" alt="">pmocz@astro.princeton.edu</a> </p>
             <a href="https://orcid.org/0000-0001-6631-2566" target="orcid.widget" rel="noopener noreferrer" style="vertical-align:top;"><img src="https://orcid.org/sites/default/files/images/orcid_16x16.png" style="width:1em;margin-right:.5em;" alt="ORCID iD icon">orcid.org/0000-0001-6631-2566</a>
             <p> </p>
             <ul class="list-inline">
@@ -840,6 +838,10 @@
               <li>4 Ivy Lane</li>
               <li>Princeton, NJ 08544, USA</li>
             </ul>
+          </div> 
+          <div class="col-sm-4 text-center">
+		  <a href="https://twitter.com/PMocz"> <i>Twitter feed:</i> </a>
+          <a class="twitter-timeline" data-height="600" href="https://twitter.com/PMocz?ref_src=twsrc%5Etfw">Tweets by PMocz</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
           </div>
           <div class="col-sm-4 text-center">
 			<!-- Instagram Feed -->		
@@ -856,7 +858,7 @@
                 resolution: 'thumbnail',
                 template: '<a href="{{link}}" target="_blank" id="{{id}}"><img src="{{image}}" /></a>',
                 sortBy: 'most-recent',
-                limit: 6,
+                limit: 8,
                 links: false
               });
               userFeed.run();
@@ -1494,7 +1496,7 @@
                   <h2>Axion Dark Matter</h2>
                   <p class="item-intro text-muted">quantum turbulent properties</p>
                   <!--  <img class="img-fluid d-block mx-auto" src="img/portfolio/axion.png" alt="">  -->
-                  <iframe width="560" height="315" src="https://www.youtube.com/embed/UBf9ghy2lPI" frameborder="0" allowfullscreen ></iframe>
+                  <iframe width="560" height="315" src="https://www.youtube.com/embed/UBf9ghy2lPI" frameborder="0" allowfullscreen></iframe>
                   <p>  Ultralight bosonic scalar field (axion) dark matter is a viable alternative to the standard cold dark matter (CDM) paradigm, 
                   as it makes the same large-scale predictions as CDM and potentially overcomes CDM's small-scale problems via a galaxy-scale de Broglie wavelength.
 				  Here I investigated some unexplored theoretical aspects of relaxed Bose-Einstein condensate (axion) dark matter (BECDM) haloes using state-of-the-art simulations.</p>
