--- a/index.html
+++ b/index.html
@@ -727,7 +727,7 @@ Sownak Bose <br>   <a href="https://itc.cfa.harvard.edu/people/sownak-bose">Harv
 Blakesley Burkhart <br>   <a href="http://www.mhdturbulence.com/Home.html">Rutgers/CCA</a>   </div>
 
 <div class="team-member">   <img class="mx-auto rounded-circle" src="img/people/chavanis.jpg" alt=""> <br>
-Pierre-Henri Chavanis <br>   <a href="http://www.lpt.ups-tlse.fr/spip.php?article23&lang=en">Tolouse</a>   </div>
+Pierre-Henri Chavanis <br>   <a href="http://www.lpt.ups-tlse.fr/spip.php?article23&lang=en">Toulouse</a>   </div>
 
 <div class="team-member">   <img class="mx-auto rounded-circle" src="img/people/christian.jpg" alt=""> <br>
 Pierre Christian <br>   <a href="http://www.pierrechristian.com/">U. Arizona</a>   </div>
@@ -736,7 +736,7 @@ Pierre Christian <br>   <a href="http://www.pierrechristian.com/">U. Arizona</a>
 Ben Church <br>   <a href="https://www.college.columbia.edu/node/12747">Columbia</a>   </div>
 
 <div class="team-member">   <img class="mx-auto rounded-circle" src="img/people/davies.jpg" alt=""> <br>
-Elliot Davies <br>   <a href="">Princeton</a>   </div>
+Elliot Davies <br>   <a href="https://web.astro.princeton.edu/people/elliot-davies">Princeton</a>   </div>
 
 <div class="team-member">   <img class="mx-auto rounded-circle" src="img/people/afabian.jpg" alt=""> <br>
 Andy Fabian <br>   <a href="http://www.csap.cam.ac.uk/network/andrew-fabian/">Cambridge</a>   </div>
@@ -748,7 +748,7 @@ Anastasia Fialkov <br>   <a href="https://www.cfa.harvard.edu/~afialkov/">Cambri
 Shy Genel <br>   <a href="https://users.flatironinstitute.org/~sgenel/">Flatiron</a>   </div>
 
 <div class="team-member">   <img class="mx-auto rounded-circle" src="img/people/giovanetti.jpg" alt=""> <br>
-Cara Giovanetti <br>   <a href="">Princeton</a>   </div>
+Cara Giovanetti <br>   <a href="https://whitmancollege.princeton.edu/people/cara-giovanetti-20">Princeton</a>   </div>
 
 <div class="team-member">   <img class="mx-auto rounded-circle" src="img/people/girart.jpg" alt=""> <br>
 Josep Miquel Girart <br>   <a href="https://scholar.google.com/citations?user=3SmUurEAAAAJ&hl=en">CSIC</a>   </div>
@@ -775,7 +775,7 @@ Yoni Kahn <br>   <a href="http://yonatan-kahn.squarespace.com/">Illinois</a>   <
 Rahul Kannan <br>   <a href="https://itc.cfa.harvard.edu/people/rahul-kannan">Harvard</a>   </div>
 
 <div class="team-member">   <img class="mx-auto rounded-circle" src="img/people/lai.jpg" alt=""> <br>
-Shih-Ping Lai <br>   <a href="">Cambridge</a>   </div>
+Shih-Ping Lai <br>   <a href="http://phys.site.nthu.edu.tw/p/406-1335-58835,r3606.php?Lang=en">Tsing Hua</a>   </div>
 
 <div class="team-member">   <img class="mx-auto rounded-circle" src="img/people/lancaster.jpg" alt=""> <br>
 Lachlan Lancaster <br>   <a href="https://web.astro.princeton.edu/people/lachlan-lancaster">Princeton</a>   </div>
@@ -799,7 +799,7 @@ Federico Marinacci <br>   <a href="https://www.unibo.it/sitoweb/federico.marinac
 Chris McKee <br>   <a href="https://astro.berkeley.edu/faculty-profile/chris-mckee">Berkeley</a>   </div>
 
 <div class="team-member">   <img class="mx-auto rounded-circle" src="img/people/munoz.jpg" alt=""> <br>
-Diego Munoz <br>   <a href="http://hosting.astro.cornell.edu/~dmunoz/">Cornell</a>   </div>
+Diego Munoz <br>   <a href="https://sites.northwestern.edu/diegomunoz/">Northwestern</a>   </div>
 
 <div class="team-member">   <img class="mx-auto rounded-circle" src="img/people/jostriker.jpg" alt=""> <br>
 Jerry Ostriker <br>   <a href="https://www.astro.columbia.edu/profile?uid=jOstriker">Columbia</a>   </div>
