--- a/index.html
+++ b/index.html
@@ -263,10 +263,10 @@
             
             <p>
 			<center>
-            <a href="https://web.astro.princeton.edu/"><img class="img-fluid" style="width:44px;height:60px;" src="img/princeton-logo.jpg" alt=""></a>
-            <a href="https://www.nasa.gov/"><img class="img-fluid" style="width:76px;height:60px;" src="img/nasa.png" alt=""></a>
-            <a href="https://www.nsf.gov/"><img class="img-fluid" style="width:60px;height:60px;" src="img/nsf.png" alt=""></a>
-            <a href="https://www.xsede.org/"><img class="img-fluid" style="width:80px;height:60px;" src="img/xsede.png" alt=""></a>
+            <a href="https://web.astro.princeton.edu/"><img class="img-fluid" style="height:60px;" src="img/princeton.png" alt=""></a>
+            <a href="https://www.nasa.gov/"><img class="img-fluid" style="height:60px;" src="img/nasa.png" alt=""></a>
+            <a href="https://www.nsf.gov/"><img class="img-fluid" style="height:60px;" src="img/nsf.png" alt=""></a>
+            <a href="https://www.xsede.org/"><img class="img-fluid" style="height:60px;" src="img/xsede2.png" alt=""></a>
             </center>
             </p>
             
