--- a/index.html
+++ b/index.html
@@ -708,130 +708,130 @@
             
             
 <p>
-<div class="team-member-small">   <img class="mx-auto rounded-circle" src="img/people/amin.jpg" alt=""> <br>
+<div class="team-member">   <img class="mx-auto rounded-circle" src="img/people/amin.jpg" alt=""> <br>
 Mustafa A. Amin <br>   <a href="http://mustafa-amin.com/">Rice</a>   </div>
 
-<div class="team-member-small">   <img class="mx-auto rounded-circle" src="img/people/becerra.jpg" alt=""> <br>
+<div class="team-member">   <img class="mx-auto rounded-circle" src="img/people/becerra.jpg" alt=""> <br>
 Fernando Becerra <br>   <a href="http://fernandobecerra.com/">Harvard</a>   </div>
 
-<div class="team-member-small">   <img class="mx-auto rounded-circle" src="img/people/blundell.jpg" alt=""> <br>
+<div class="team-member">   <img class="mx-auto rounded-circle" src="img/people/blundell.jpg" alt=""> <br>
 Katherine Blundell <br>   <a href="https://www2.physics.ox.ac.uk/contacts/people/blundell">Oxford</a>   </div>
 
-<div class="team-member-small">   <img class="mx-auto rounded-circle" src="img/people/bose.jpg" alt=""> <br>
+<div class="team-member">   <img class="mx-auto rounded-circle" src="img/people/bose.jpg" alt=""> <br>
 Sownak Bose <br>   <a href="https://itc.cfa.harvard.edu/people/sownak-bose">Harvard</a>   </div>
 
-<div class="team-member-small">   <img class="mx-auto rounded-circle" src="img/people/mike.jpg" alt=""> <br>
+<div class="team-member">   <img class="mx-auto rounded-circle" src="img/people/mike.jpg" alt=""> <br>
 Mike Boylan-Kolchin <br>   <a href="http://www.as.utexas.edu/~mbk/">UT Austin</a>   </div>
 
-<div class="team-member-small">   <img class="mx-auto rounded-circle" src="img/people/burkhart.jpg" alt=""> <br>
+<div class="team-member">   <img class="mx-auto rounded-circle" src="img/people/burkhart.jpg" alt=""> <br>
 Blakesley Burkhart <br>   <a href="http://www.mhdturbulence.com/Home.html">Rutgers/CCA</a>   </div>
 
-<div class="team-member-small">   <img class="mx-auto rounded-circle" src="img/people/chavanis.jpg" alt=""> <br>
+<div class="team-member">   <img class="mx-auto rounded-circle" src="img/people/chavanis.jpg" alt=""> <br>
 Pierre-Henri Chavanis <br>   <a href="http://www.lpt.ups-tlse.fr/spip.php?article23&lang=en">Toulouse</a>   </div>
 
-<div class="team-member-small">   <img class="mx-auto rounded-circle" src="img/people/christian.jpg" alt=""> <br>
+<div class="team-member">   <img class="mx-auto rounded-circle" src="img/people/christian.jpg" alt=""> <br>
 Pierre Christian <br>   <a href="http://www.pierrechristian.com/">U. Arizona</a>   </div>
 
-<div class="team-member-small">   <img class="mx-auto rounded-circle" src="img/people/church.jpg" alt=""> <br>
+<div class="team-member">   <img class="mx-auto rounded-circle" src="img/people/church.jpg" alt=""> <br>
 Ben Church <br>   <a href="https://www.college.columbia.edu/node/12747">Columbia</a>   </div>
 
-<div class="team-member-small">   <img class="mx-auto rounded-circle" src="img/people/davies.jpg" alt=""> <br>
+<div class="team-member">   <img class="mx-auto rounded-circle" src="img/people/davies.jpg" alt=""> <br>
 Elliot Davies <br>   <a href="https://web.astro.princeton.edu/people/elliot-davies">Princeton</a>   </div>
 
-<div class="team-member-small">   <img class="mx-auto rounded-circle" src="img/people/afabian.jpg" alt=""> <br>
+<div class="team-member">   <img class="mx-auto rounded-circle" src="img/people/afabian.jpg" alt=""> <br>
 Andy Fabian <br>   <a href="http://www.csap.cam.ac.uk/network/andrew-fabian/">Cambridge</a>   </div>
 
-<div class="team-member-small">   <img class="mx-auto rounded-circle" src="img/people/fialkov.jpg" alt=""> <br>
+<div class="team-member">   <img class="mx-auto rounded-circle" src="img/people/fialkov.jpg" alt=""> <br>
 Anastasia Fialkov <br>   <a href="https://www.cfa.harvard.edu/~afialkov/">Cambridge</a>   </div>
 
-<div class="team-member-small">   <img class="mx-auto rounded-circle" src="img/people/genel.jpg" alt=""> <br>
+<div class="team-member">   <img class="mx-auto rounded-circle" src="img/people/genel.jpg" alt=""> <br>
 Shy Genel <br>   <a href="https://users.flatironinstitute.org/~sgenel/">Flatiron</a>   </div>
 
-<div class="team-member-small">   <img class="mx-auto rounded-circle" src="img/people/giovanetti.jpg" alt=""> <br>
+<div class="team-member">   <img class="mx-auto rounded-circle" src="img/people/giovanetti.jpg" alt=""> <br>
 Cara Giovanetti <br>   <a href="https://whitmancollege.princeton.edu/people/cara-giovanetti-20">Princeton</a>   </div>
 
-<div class="team-member-small">   <img class="mx-auto rounded-circle" src="img/people/girart.jpg" alt=""> <br>
+<div class="team-member">   <img class="mx-auto rounded-circle" src="img/people/girart.jpg" alt=""> <br>
 Josep Miquel Girart <br>   <a href="https://scholar.google.com/citations?user=3SmUurEAAAAJ&hl=en">CSIC</a>   </div>
 
-<div class="team-member-small">   <img class="mx-auto rounded-circle" src="img/people/glazebrook.jpg" alt=""> <br>
+<div class="team-member">   <img class="mx-auto rounded-circle" src="img/people/glazebrook.jpg" alt=""> <br>
 Karl Glazebrook <br>   <a href="http://astronomy.swin.edu.au/~karl/Karl-Home/Home.html">Swinburne</a>   </div>
 
-<div class="team-member-small">   <img class="mx-auto rounded-circle" src="img/people/agoodman.jpg" alt=""> <br>
+<div class="team-member">   <img class="mx-auto rounded-circle" src="img/people/agoodman.jpg" alt=""> <br>
 Alyssa Goodman <br>   <a href="https://astronomy.fas.harvard.edu/people/goodman-alyssa">Harvard</a>   </div>
 
-<div class="team-member-small">   <img class="mx-auto rounded-circle" src="img/people/agreen.jpg" alt=""> <br>
+<div class="team-member">   <img class="mx-auto rounded-circle" src="img/people/agreen.jpg" alt=""> <br>
 Andy Green <br>   <a href="https://www.aao.gov.au/science/research/staff/Andrew%20Green">AAO</a>   </div>
 
-<div class="team-member-small">   <img class="mx-auto rounded-circle" src="img/people/hernquist.jpg" alt=""> <br>
+<div class="team-member">   <img class="mx-auto rounded-circle" src="img/people/hernquist.jpg" alt=""> <br>
 Lars Hernquist <br>   <a href="https://astronomy.fas.harvard.edu/people/lars-hernquist">Harvard</a>   </div>
 
-<div class="team-member-small">   <img class="mx-auto rounded-circle" src="img/people/hull.png" alt=""> <br>
+<div class="team-member">   <img class="mx-auto rounded-circle" src="img/people/hull.png" alt=""> <br>
 Chat Hull <br>   <a href="https://www.cfa.harvard.edu/~chull/index.html">NAOJ</a>   </div>
 
-<div class="team-member-small">   <img class="mx-auto rounded-circle" src="img/people/kahn.jpg" alt=""> <br>
+<div class="team-member">   <img class="mx-auto rounded-circle" src="img/people/kahn.jpg" alt=""> <br>
 Yoni Kahn <br>   <a href="http://yonatan-kahn.squarespace.com/">Illinois</a>   </div>
 
-<div class="team-member-small">   <img class="mx-auto rounded-circle" src="img/people/kannan.jpg" alt=""> <br>
+<div class="team-member">   <img class="mx-auto rounded-circle" src="img/people/kannan.jpg" alt=""> <br>
 Rahul Kannan <br>   <a href="https://itc.cfa.harvard.edu/people/rahul-kannan">Harvard</a>   </div>
 
-<div class="team-member-small">   <img class="mx-auto rounded-circle" src="img/people/lai.jpg" alt=""> <br>
+<div class="team-member">   <img class="mx-auto rounded-circle" src="img/people/lai.jpg" alt=""> <br>
 Shih-Ping Lai <br>   <a href="http://phys.site.nthu.edu.tw/p/406-1335-58835,r3606.php?Lang=en">Tsing Hua</a>   </div>
 
-<div class="team-member-small">   <img class="mx-auto rounded-circle" src="img/people/lancaster.jpg" alt=""> <br>
+<div class="team-member">   <img class="mx-auto rounded-circle" src="img/people/lancaster.jpg" alt=""> <br>
 Lachlan Lancaster <br>   <a href="https://web.astro.princeton.edu/people/lachlan-lancaster">Princeton</a>   </div>
 
-<div class="team-member-small">   <img class="mx-auto rounded-circle" src="img/people/julia_lee.jpg" alt=""> <br>
+<div class="team-member">   <img class="mx-auto rounded-circle" src="img/people/julia_lee.jpg" alt=""> <br>
 Julia Lee <br>   <a href="https://scholar.harvard.edu/jclee">Harvard</a>   </div>
 
-<div class="team-member-small">   <img class="mx-auto rounded-circle" src="img/people/lisanti.jpg" alt=""> <br>
+<div class="team-member">   <img class="mx-auto rounded-circle" src="img/people/lisanti.jpg" alt=""> <br>
 Mariangela Lisanti <br>   <a href="https://www.mariangelalisanti.com/">Princeton</a>   </div>
 
-<div class="team-member-small">   <img class="mx-auto rounded-circle" src="img/people/loeb.jpg" alt=""> <br>
+<div class="team-member">   <img class="mx-auto rounded-circle" src="img/people/loeb.jpg" alt=""> <br>
 Avi Loeb <br>   <a href="https://www.cfa.harvard.edu/~loeb/">Harvard</a>   </div>
 
-<div class="team-member-small">   <img class="mx-auto rounded-circle" src="img/people/malacari.jpg" alt=""> <br>
+<div class="team-member">   <img class="mx-auto rounded-circle" src="img/people/malacari.jpg" alt=""> <br>
 Max Malacari <br>   <a href="https://maxmalacari.com">KICP</a>   </div>
 
-<div class="team-member-small">   <img class="mx-auto rounded-circle" src="img/people/marinacci.jpg" alt=""> <br>
+<div class="team-member">   <img class="mx-auto rounded-circle" src="img/people/marinacci.jpg" alt=""> <br>
 Federico Marinacci <br>   <a href="https://www.unibo.it/sitoweb/federico.marinacci2/cv-en">Bologna</a>   </div>
 
-<div class="team-member-small">   <img class="mx-auto rounded-circle" src="img/people/mckee.jpg" alt=""> <br>
+<div class="team-member">   <img class="mx-auto rounded-circle" src="img/people/mckee.jpg" alt=""> <br>
 Chris McKee <br>   <a href="https://astro.berkeley.edu/faculty-profile/chris-mckee">Berkeley</a>   </div>
 
-<div class="team-member-small">   <img class="mx-auto rounded-circle" src="img/people/munoz.jpg" alt=""> <br>
+<div class="team-member">   <img class="mx-auto rounded-circle" src="img/people/munoz.jpg" alt=""> <br>
 Diego Munoz <br>   <a href="https://sites.northwestern.edu/diegomunoz/">Northwestern</a>   </div>
 
-<div class="team-member-small">   <img class="mx-auto rounded-circle" src="img/people/jostriker.jpg" alt=""> <br>
+<div class="team-member">   <img class="mx-auto rounded-circle" src="img/people/jostriker.jpg" alt=""> <br>
 Jerry Ostriker <br>   <a href="https://www.astro.columbia.edu/profile?uid=jOstriker">Columbia</a>   </div>
 
-<div class="team-member-small">   <img class="mx-auto rounded-circle" src="img/people/pakmor.jpg" alt=""> <br>
+<div class="team-member">   <img class="mx-auto rounded-circle" src="img/people/pakmor.jpg" alt=""> <br>
 Rudiger Pakmor <br>   <a href="https://www.mpa-garching.mpg.de/person/94899/2377">MPA-Garching</a>   </div>
 
-<div class="team-member-small">   <img class="mx-auto rounded-circle" src="img/people/robles.jpg" alt=""> <br>
+<div class="team-member">   <img class="mx-auto rounded-circle" src="img/people/robles.jpg" alt=""> <br>
 Victor Robles <br>   <a href="http://localgroup.ps.uci.edu/roblessv/home.html">Yale</a>   </div>
 
-<div class="team-member-small">   <img class="mx-auto rounded-circle" src="img/people/schaal.jpg" alt=""> <br>
+<div class="team-member">   <img class="mx-auto rounded-circle" src="img/people/schaal.jpg" alt=""> <br>
 Kevin Schaal <br>   <a href="http://www.kmschaal.de/">HITS</a>   </div>
 
-<div class="team-member-small">   <img class="mx-auto rounded-circle" src="img/people/shenx.jpg" alt=""> <br>
+<div class="team-member">   <img class="mx-auto rounded-circle" src="img/people/shenx.jpg" alt=""> <br>
 Xuejian Shen <br>   <a href="http://pma.caltech.edu/people/xuejian-jacob-shen">Caltech</a>   </div>
 
-<div class="team-member-small">   <img class="mx-auto rounded-circle" src="img/people/sijacki.jpg" alt=""> <br>
+<div class="team-member">   <img class="mx-auto rounded-circle" src="img/people/sijacki.jpg" alt=""> <br>
 Debora Sijacki <br>   <a href="https://www.ast.cam.ac.uk/people/debora.sijacki">Cambridge</a>   </div>
 
-<div class="team-member-small">   <img class="mx-auto rounded-circle" src="img/people/spergel.jpg" alt=""> <br>
+<div class="team-member">   <img class="mx-auto rounded-circle" src="img/people/spergel.jpg" alt=""> <br>
 David Spergel <br>   <a href="https://www.astro.princeton.edu/~dns/">Flatiron</a>   </div>
 
-<div class="team-member-small">   <img class="mx-auto rounded-circle" src="img/people/springel.jpg" alt=""> <br>
+<div class="team-member">   <img class="mx-auto rounded-circle" src="img/people/springel.jpg" alt=""> <br>
 Volker Springel <br>   <a href="https://www.imprs-astro.mpg.de/content/prof-dr-volker-springel.html">MPA-Garching</a>   </div>
 
-<div class="team-member-small">   <img class="mx-auto rounded-circle" src="img/people/succi.jpg" alt=""> <br>
+<div class="team-member">   <img class="mx-auto rounded-circle" src="img/people/succi.jpg" alt=""> <br>
 Sauro Succi <br>   <a href="https://www.iit.it/people/sauro-succi">Harvard/IIT</a>   </div>
 
-<div class="team-member-small">   <img class="mx-auto rounded-circle" src="img/people/vogelsberger.jpg" alt=""> <br>
+<div class="team-member">   <img class="mx-auto rounded-circle" src="img/people/vogelsberger.jpg" alt=""> <br>
 Mark Vogelsberger <br>   <a href="http://web.mit.edu/physics/people/faculty/vogelsberger_mark.html">MIT</a>   </div>
 
-<div class="team-member-small">   <img class="mx-auto rounded-circle" src="img/people/zavala.jpg" alt=""> <br>
+<div class="team-member">   <img class="mx-auto rounded-circle" src="img/people/zavala.jpg" alt=""> <br>
 Jesus Zavala <br>   <a href="https://notendur.hi.is/~jzavala/">Iceland</a>   </div>
 
 </p>
